<resources>
    <string name="app_name">CalcLock</string>
    <string name="start_to_use">Start to use</string>
    <string name="hide_photos_video_apps_and_ninternet_records_on_nyour_phone">Hide photos, video, apps and\ninternet records on\nyour phone</string>
    <string name="welcome_to_callock">Welcome to Callock</string>
    <string name="input_four_digits">input four digit password and press "=" button</string>
    <string name="confirm_password">confirm the password and press the = button</string>
    <string name="text_unknown">Unknown</string>
    <string name="password">Password</string>
    <string name="more_apps">More Apps</string>
    <string name="setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_nmanager">File \nmanager</string>
    <string name="username">Username</string>
    <string name="butn_remove">Remove</string>
    <string name="butn_save">Save</string>
    <string name="butn_close">Close</string>
    <string name="change_location">change location</string>
    <string name="hide_photos">Hide Photos</string>
    <string name="new_folder">New Folder</string>
    <string name="default_text">Default</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="folder_name">Folder name</string>
    <string name="my_folders">My Folders</string>
    <string name="directory_already_exists">Directory already exists</string>
    <string name="un_hide">Un Hide</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="attention">Attention</string>
    <string name="unhide_to_origin_path">Unhide to origin path</string>
    <string name="delete_from_this_device">Delete from this device</string>
    <string name="confirm">Confirm</string>
    <string name="videos">Videos</string>
    <string name="move">Move</string>
    <string name="audios">Audios</string>
    <string name="input_current_password">Input current password</string>
    <string name="wrong_password">Wrong password please try again</string>
    <string name="other">other</string>
    <string name="video_mode_error">Switching to video mode failed</string>
    <string name="video_recording_failed">Video recording failed, try using a different resolution</string>
    <string name="save_error_internal_storage">An error occurred, save folder changed to internal storage</string>
    <string name="camera_folder">Camera folder</string>
    <string name="hide_videos">Hide Videos</string>
    <string name="hide_audios">Hide Audios</string>
    <string name="hide_files">Hide files</string>
    <string name="share">Share</string>
    <string name="no_files_selected">no files selected</string>
    <string name="limit_share_items">You can share upto 8 files at a time</string>
    <string name="connect_to_internet">Connect to internet</string>
    <string name="internet_connection_description">Please connect to internet, If you are a first time user or you have cleared app data</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate us</string>
    <string name="like_this_app">Like this app? Please rate us!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="Hated_it">Hated it</string>
    <string name="Disliked_it">Disliked it</string>
    <string name="it_ok">Its ok</string>
    <string name="Liked_it">Liked it</string>
    <string name="Loved_it">Loved it</string>
    <string name="submit">Submit</string>
    <string name="not_now">Not now</string>
    <string name="feedback_suggestions">Feedback/Suggestion</string>
    <string name="rate_us_title2">Is this app working out for you?</string>
    <string name="rate_us_title">We would greatly appreciate if you can rate us.</string>
    <string name="rate_us_positive_button_text">I love it</string>
    <string name="select_audios">Select Audios</string>
    <string name="select_videos">Select Videos</string>
    <string name="select_photos">Select Photos</string>
    <string name="vault_file_manager">Vault File manager</string>
    <string name="got_it">Got it</string>
    <string name="help_dialog_text">If you forgot your password\n Enter (11223344) \"=\"\nWe will help reset the password</string>
    <string name="privacy_policy_url">https://www.rocksplayer.com/privacy-policy</string>
    <string name="legal_text">We have used following open source libraries in app.The terms of the Apache License can be viewed at \n<a href="https://www.apache.org/licenses/LICENSE-2.0\">https://www.apache.org/licenses/LICENSE-2.0</a>\n\n1.Glide com.github.bumptech.glide:glide:4.12.0(Licensed under the Apache License, Version 2.0 )\n<a href="https://github.com/bumptech/glide">https://github.com/bumptech/glide</a>\n\n2. Google gson (Licensed under the Apache License, Version 2.0 )\n<a href="https://code.google.com/p/google-gson">https://code.google.com/p/google-gson</a>\n\n3. Simple Rating Bar(Licensed under the Apache License, Version 2.0 )\n<a href="https://mvnrepository.com/artifact/com.iarcuschin/simpleratingbar">https://mvnrepository.com/artifact/com.iarcuschin/simpleratingbar</a>\n\n4. Easypermissions(Licensed under the Apache License, Version 2.0 )\n<a href="https://github.com/googlesamples/easypermissions">https://github.com/googlesamples/easypermissions</a>\n\n</string>
    <string name="unhide_to">Unhide to</string>
    <string name="hiderx_path">Hiderx path</string>
    <string name="original_path">Original Path</string>
    <string name="unhide_path_prefix">Your device root directory/Download/</string>
    <string name="select_files">Select Files</string>
    <string name="photos">Photos</string>
    <string name="File_name">File name</string>
    <string name="duration">Duration</string>
    <string name="File_size">File size</string>
    <string name="location">Location</string>
    <string name="Date">Date</string>
    <string name="properties">Properties</string>
    <string name="photo">photo</string>
    <string name="video">Video</string>
    <string name="back_camera">Back camera resolutions</string>
    <string name="front_camera">Front camera resolutions</string>
</resources>