<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/grey800"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_new_folder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/new_folder"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/folder_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/folder_name"
        android:textColor="@color/white"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tv_new_folder"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:textColorHint="@color/grey600"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/tv_already_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/folder_name"
        android:textColor="@color/white"
        android:text="@string/directory_already_exists"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:layout_toStartOf="@id/tv_ok"
        android:layout_below="@+id/tv_already_exists"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tv_already_exists"
        android:layout_marginTop="20dp"
        android:textColor="@color/btn_blue"
        android:layout_marginStart="16dp"
        />
</RelativeLayout>