<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/grey800"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_main"
        >
        <TextView
            android:id="@+id/tv_attention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attention"
            android:textColor="@color/btn_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_how_to_deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="How to deal with these files"
            android:textColor="@color/grey400"
            />

        <RadioGroup
            android:id="@+id/action_to_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            >
            <RadioButton
                android:id="@+id/action_unhide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unhide_to_origin_path"
                android:textColor="@color/white"
                android:checked="true"
                android:buttonTint="@color/btn_blue"
                android:padding="10dp"
                />
            <RadioButton
                android:id="@+id/action_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_from_this_device"
                android:textColor="@color/white"
                android:buttonTint="@color/btn_blue"
                android:padding="10dp"
                />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_cancel_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/tv_confirm"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_main"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/btn_blue"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_main"
        android:id="@+id/tv_confirm"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>