<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/welcome"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/headline_welcome"
        android:layout_below="@+id/img_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_callock"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginStart="32dp"
        />
        <TextView
            android:id="@+id/description"
            android:layout_below="@+id/headline_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_photos_video_apps_and_ninternet_records_on_nyour_phone"
            android:textColor="@color/white"
            android:layout_marginStart="32dp"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            />
    <TextView
        android:id="@+id/tv_start_to_use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_to_use"
        android:background="@drawable/white_oval"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-medium"
        />
</RelativeLayout>