<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/spacing8"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/spacing16"
        android:textSize="@dimen/text_big"
        android:text="@string/feedback_suggestions"
        />

    <EditText
        android:id="@+id/feedbacktext"
        android:layout_width="match_parent"
        android:gravity="start"
        android:textColor="@color/white"
        android:minHeight="50dp"
        android:layout_marginStart="@dimen/spacing16"
        android:layout_marginEnd="@dimen/spacing16"
        android:cursorVisible="true"
        android:padding="@dimen/spacing16"
        android:textColorHint="@color/grey500"
        android:focusable="true"
        android:textCursorDrawable="@color/white"
        android:hint="@string/feedback_suggestions"
        android:layout_height="wrap_content">
    </EditText>
    <LinearLayout
        android:padding="@dimen/spacing16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/spacing24"
        android:orientation="horizontal">


        <Button
            android:id="@+id/notnow"
            android:layout_width="100dp"
            android:text="@string/not_now"
            android:textSize="@dimen/text_medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="@dimen/spacing16"
            android:textColor="@color/green_v1"
            android:layout_height="35dp"/>


        <Button
            android:layout_marginStart="@dimen/spacing16"
            android:id="@+id/feedback_btn"
            android:text="@string/submit"
            android:layout_width="100dp"
            android:textSize="@dimen/text_medium"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/grey700"
            android:layout_height="35dp"/>
    </LinearLayout>

</LinearLayout>
