<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header_default_device_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="15dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp"
        />
    <RelativeLayout
        android:id="@+id/rl_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="30dp"
        >
        <include
            android:layout_width="90dp"
            android:layout_height="90dp"
            layout="@layout/include_layout_profile_picture"
            android:id="@+id/image"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/image"
            >

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_unknown"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv_profile"
                android:src="@drawable/edit_username"
                app:tint="@color/btn_blue"
                android:layout_marginStart="8dp"
                />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="?attr/selectableItemBackgroundBorderless"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/edit_password"
                app:tint="@color/btn_blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:orientation="vertical"
                android:textSize="18sp"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/more_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_more_apps"
                app:tint="@color/btn_blue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_apps"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_setting"
                app:tint="@color/btn_blue"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- <TextView
         android:id="@+id/header_default_device_version_text"
         style="@style/TextAppearance.Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />-->

</LinearLayout>
